--- a/rimijoker.html
+++ b/rimijoker.html
@@ -1,22 +1,21 @@
-<span id="a">(Enter Github username here)@Enigma</span>:<span id="b">~</span
-><span id="c">$</span> cd (Enter Github username here)/About_Me
-<span id="a">(Enter Github username here)@Enigma</span>:<span id="b">~</span
-><span id="c">$</span> cat (Enter name here).txt<br /><br />
-"<span id="k">Hey there, nice to see you here.</span>" This is (Enter Github
-username here).
+<span id="a">brybranmuffin@Enigma</span>:<span id="b">~</span
+><span id="c">$</span> cd brybranmuffin/About_Me
+<span id="a">brybranmuffin@Enigma</span>:<span id="b">~</span
+><span id="c">$</span> cat brybranmuffin.txt<br /><br />
+"<span id="k">Hey there, nice to see you here.</span>" This is brybranmuffin.
 <p>Welcome</p>
 <p>
-  I am a (fill tech role here) engineer, you can checkout my resume here.
-  <a href="#Link"> Resume</a>
+  I am a Software Engineer, you can checkout my resume here.
+  <a href="resume.pdf" _target=""> Resume</a>
 </p>
 <p>
   I usally waste my time doing cool projects.<br /><br /><br />You can checkout
   my projects on my resume, but if you are more tech savy, here is my
-  <a href="#link"> GitHub</a> link.
+  <a href="https://github.com/brybranmuffin" _target=""> GitHub</a> link.
 </p>
-<p>You can visit my LinkedIn, here: <a href="#link">LinkedIn</a> <br /></p>
+<p>You can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/bryantbet/" _target="">LinkedIn</a> <br /></p>
 
 You can also contact me through email, feel free to send me an email at
-"XXXXXXXXX@XXXXX.com".
+"bettencourt@berkeley.edu".
 
-<p>Cheers!</p>
+<p>:)</p>
