--- a/rimijoker.html
+++ b/rimijoker.html
@@ -6,16 +6,16 @@
 <p>Welcome</p>
 <p>
   I am a Software Engineer, you can checkout my resume here.
-  <a href="resume.pdf" _target=""> Resume</a>
+  <a href="Bryant_Bettencourt_Resume.pdf" target="_blank"> Resume</a>
 </p>
 <p>
-  I usally waste my time doing cool projects.<br /><br /><br />You can checkout
-  my projects on my resume, but if you are more tech savy, here is my
-  <a href="https://github.com/brybranmuffin" _target=""> GitHub</a> link.
+  I usually waste my time doing cool projects.<br /><br /><br />You can checkout some
+  of my projects on my resume, and more of them on my Github!
+  <a href="https://github.com/brybranmuffin" target="_blank"> GitHub</a> link.
 </p>
-<p>You can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/bryantbet/" _target="">LinkedIn</a> <br /></p>
+<p>You can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/bryantbet/" target="_blank">LinkedIn</a> <br /></p>
 
-You can also contact me through email, feel free to send me an email at
+Feel free to send me an email at:
 "bettencourt@berkeley.edu".
 
 <p>:)</p>
