--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-  <title>(put name here)</title>
+  <title>Bryant Bettencourt's Website</title>
+  <link rel= "shortcut icon" type = "image/png" href = "img/b.png">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="assets/css/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
