more personal info

--- a/rimijoker.html
+++ b/rimijoker.html
@@ -1,11 +1,11 @@
-<span id="a">brybranmuffin@Enigma</span>:<span id="b">~</span
-><span id="c">$</span> cd brybranmuffin/About_Me
-<span id="a">brybranmuffin@Enigma</span>:<span id="b">~</span
-><span id="c">$</span> cat brybranmuffin.txt<br /><br />
-"<span id="k">Hey there, nice to see you here.</span>" This is brybranmuffin.
+<span id="a">bryant@Enigma</span>:<span id="b">~</span
+><span id="c">$</span> cd bryant/About_Me
+<span id="a">bryant@Enigma</span>:<span id="b">~</span
+><span id="c">$</span> cat bryant.txt<br /><br />
+"<span id="k">Hey there, nice to see you here.</span>" This is Bryant Bettencourt's personal website.
 <p>Welcome</p>
 <p>
-  I am a Software Engineer, you can checkout my resume here.
+  I am a student and TA at UC Berkeley, you can checkout my resume here.
   <a href="Bryant_Bettencourt_Resume.pdf" target="_blank"> Resume</a>
 </p>
 <p>
