--- a/rimijoker.html
+++ b/rimijoker.html
@@ -1,11 +1,11 @@
-<span id="a">bryant@Enigma</span>:<span id="b">~</span
+<span id="a">bryant@website</span>:<span id="b">~</span
 ><span id="c">$</span> cd bryant/About_Me
-<span id="a">bryant@Enigma</span>:<span id="b">~</span
+<span id="a">bryant@website</span>:<span id="b">~</span
 ><span id="c">$</span> cat bryant.txt<br /><br />
 "<span id="k">Hey there, nice to see you here.</span>" This is Bryant Bettencourt's personal website.
 <p>Welcome</p>
 <p>
-  I am a student and TA at UC Berkeley, you can checkout my resume here.
+  I am a software engineer at Intel, you can check out my resume here.
   <a href="Bryant_Bettencourt_Resume.pdf" target="_blank"> Resume</a>
 </p>
 <p>
@@ -16,6 +16,6 @@
 <p>You can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/bryantbet/" target="_blank">LinkedIn</a> <br /></p>
 
 Feel free to send me an email at:
-"bettencourt@berkeley.edu".
+"bryant.bettencourt.dev@gmail.com".
 
 <p>:)</p>
