--- a/bryantbettencourt.html
+++ b/bryantbettencourt.html
@@ -1,6 +1,6 @@
-<span id="a">bryant@website</span>:<span id="b">~</span
+<span id="a">bryant@home</span>:<span id="b">~</span
 ><span id="c">$</span> cd bryant/About_Me
-<span id="a">bryant@website</span>:<span id="b">~</span
+<span id="a">bryant@home</span>:<span id="b">~</span
 ><span id="c">$</span> cat bryant.txt<br /><br />
 "<span id="k">Hey there, nice to see you here.</span>" This is Bryant Bettencourt's personal website.
 <p>Welcome</p>
@@ -9,8 +9,8 @@
   <a href="Bryant_Bettencourt_Resume.pdf" target="_blank"> Resume</a>
 </p>
 <p>
-  I usually waste my time doing cool projects.<br /><br /><br />You can checkout some
-  of my projects on my resume, and more of them on my Github!
+  Sometimes I do projects! Other times I spend time with my <a href="img/boys.jpg" target="_blank">cats</a>.<br /><br /><br />You can checkout some
+  of my projects on my Github!
   <a href="https://github.com/brybranmuffin" target="_blank"> GitHub</a> link.
 </p>
 <p>You can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/bryantbet/" target="_blank">LinkedIn</a> <br /></p>
